<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_result_imc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:padding="15dp"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/res_imc_title"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/res_imc_textView_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="36sp"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:background="@color/dark_green"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/res_imc_textView_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/res_imc_type"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/res_imc_textView_cat0"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/dark_red"
            android:padding="8dp"
            android:text="@string/res_imc_red"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/res_imc_textView_cat1"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/light_red"
            android:padding="8dp"
            android:text="@string/res_imc_orange"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/res_imc_textView_cat2"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/brown"
            android:padding="8dp"
            android:text="@string/res_imc_brown"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/res_imc_textView_cat3"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/light_green"
            android:padding="8dp"
            android:text="@string/res_imc_yellow"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/res_imc_textView_cat4"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/dark_green"
            android:padding="8dp"
            android:text="@string/res_imc_green"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/res_imc_textView_cat5"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/turquoise"
            android:padding="8dp"
            android:text="@string/res_imc_turquoise"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/res_imc_textView_cat6"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@color/blue"
            android:padding="8dp"
            android:text="@string/res_imc_blue"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_imc_warning"
            android:textAlignment="center"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp"
            >

            <Button
                android:id="@+id/res_imc_button_recalculer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/light_gray"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/res_imc_recalc"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/res_imc_button_historique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/light_gray"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/res_imc_history"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/resultat_imc_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        app:borderWidth="1dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>